002-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld-nodejs
  name: helloworld-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld-nodejs
  template:
    metadata:
      labels:
        app: helloworld-nodejs
    spec:
      containers:
        - image: hello-node:v1
          name: helloworld-nodejs
          ports:
            - containerPort: 8080
