002-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-nodejs
spec:
  selector:
    app: helloworld-nodejs
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 30001
  type: NodePort
